Fixed most of the functionallity of shoppingcart and added bar on top of the page to display status messages to the user.
git-svn-id: file:///var/svn/claro-catalog@108 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/general.css
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/general.css
@@ -47,6 +47,24 @@ body {
 	background-repeat:no-repeat;
 }
 
+.page_messages {
+  position:absolute;
+  display:inline;
+  left:250px;
+  top:30px;
+  padding:3px 5px;
+  font-size:12px;
+  font-weight: bold;
+  color:#032D67;
+  background-color:gold; 
+}
+
+.page_messages ul, .page_messages li {
+  padding-left:0;
+  display:inline;
+  list-style:none;
+}
+
 .page_login {
 	position:absolute;
 	right:0px;
