- Added settings configuration of languages. - Added request confirmation before delete. - Added light brown background to language specific widgets. - Added initial Orders tab.
git-svn-id: file:///var/svn/claro-catalog@198 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/theme/catalogxs/public/gwt/catalogxs/catalogxs.css
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/theme/catalogxs/public/gwt/catalogxs/catalogxs.css
@@ -1225,3 +1225,11 @@ td.datePickerMonth {
   background: #f5a71f url(images/splitPanelThumb.png) center center no-repeat;
   cursor: row-resize;
 }
+
+.languageField {
+  background: #fad38f;
+}
+
+.statusMessage {
+  background: #f5a71f;
+}
