--- a/CatalogXS/trunk/CatalogXS/resources/general.css
+++ b/CatalogXS/trunk/CatalogXS/resources/general.css
@@ -85,7 +85,7 @@ body {
 	text-decoration:underline;
 }
 
-.page_content {
+.site_table {
 	background-image:url("images/page_background.jpg");
 	background-repeat:no-repeat;
 	background-color:#f1f1f1;
