--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/webshop.css
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/webshop.css
@@ -1,8 +1,8 @@
 .add_to_cart {
 	float:right;
-	padding: 8px 12px;
+	padding: 4px 6px;
 	font-size: 12px;
-	text-decoration: none;
+	text-decoration: underline;
 	white-space:nowrap;
 	line-height:20px;
 	border: 1px solid #999;
