- Added basic implementation of "related to". - Refactored displaying of product group properties and other attributes. - Added crud/query methods for order class.
git-svn-id: file:///var/svn/claro-catalog@207 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/theme/catalogxs/public/gwt/catalogxs/catalogxs.css
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/theme/catalogxs/public/gwt/catalogxs/catalogxs.css
@@ -1233,3 +1233,19 @@ td.datePickerMonth {
 .statusMessage {
   background: #f5a71f;
 }
+
+.properties {
+	 border: 2px solid #d86403; 
+}
+.propertyGroupName {
+  background-color: #f5a71f;
+  margin-bottom:2px;
+  padding: 5px;
+  font-weight:bold;
+  cursor:pointer;
+  white-space:nowrap;
+}
+
+.propertyGroupNameSelected {
+  background-color: #d86403;
+}
