--- a/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/webshop.css
+++ b/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/webshop.css
@@ -178,7 +178,6 @@ body {
   font-weight:bold;
 }
 .homepage_nieuws_midden .agatitle a:hover {
-  color: #F41651;
 }
 
 .homepage_nieuws_midden .agatext {
@@ -196,7 +195,7 @@ body {
 }
 
 
-.page_menu {
+.side_bar {
   position:relative;
   background-image:url("images/page_menu_background.jpg");
   background-repeat:no-repeat;
@@ -211,7 +210,7 @@ body {
   padding-bottom:10px;
 }
 
-.page_menu_footer {
+.side_bar_footer {
   position:absolute;
   bottom:-1px;
   background-image:url("images/page_menu_background_footer.jpg");
@@ -260,49 +259,51 @@ body {
   margin-bottom:10px;
 }
 
-
-.page_menu_artgrp {
+.side_bar_panel {
   padding:10px;
+  padding-top:5px;
   padding-bottom:5px;
 }
-.page_menu_artgrp .description {
-  color:#032D67;
-  font-size:14px;
-  font-weight:bold;
-}
-.page_menu_artgrp .items {
+.side_bar_panel .items {
   padding-bottom:0px;
   margin-top:8px;
   border-top:1px solid #D9DBDA;
   border-bottom:1px solid #D9DBDA;
   color:#929397;
 }
-.page_menu_artgrp .items a {
+.side_bar_panel .items a {
   color:#929397;
   text-decoration:underline;
 }
-.page_menu_artgrp .items a:hover {
+.side_bar_panel .items a:hover {
   color: #F41651;
 }
-.page_menu_artgrp .items .title {
+.side_bar_panel .items .title {
   margin-top:8px;
   font-weight:bold;
   font-size:12px;
   color:#717171;
 }
-.page_menu_artgrp .items .text {
+.side_bar_panel .items .text {
   margin-bottom:10px;
 }
 
+.side_bar_panel td {
+	padding-bottom: 5px;
+}
 
 .page_searchbox {
   width:161px;
   height:49px;
-  border-bottom:3px solid #fff;
   padding:10px;
   padding-top:5px;
-  padding-bottom:8px;
+  padding-bottom:6px;
   overflow:hidden;
+}
+
+.side_bar hr {
+  border: none;
+  border-bottom:3px solid #fff;
 }
 
 .page_searchbox form {
@@ -319,6 +320,7 @@ body {
   padding-top:3px;
   padding-bottom:3px;
 }
+
 .page_searchbox .searchfield {
   width:93px;
   margin-right:5px;
@@ -344,8 +346,13 @@ body {
   *width:76px;
 }
 
+.loginpanel .passwordfield {
+	width: 86px;
+}
 
-
+.loginpanel .formbutton {
+	padding: 2px;
+}
 
 
 
@@ -374,7 +381,7 @@ body {
   font-size:12px;
 }
 
-h1 {
+.page_content h1 {
 	font-weight: normal;
   font-size:18px;
   line-height:22px;
@@ -391,12 +398,17 @@ h2 {
   padding-top:15px;
   margin-top:7px;
   border-bottom:1px solid #929397;
-  
   clear: both;
 color: #929397;
-font-weight: bold;
 line-height: 1.6em;
 margin-bottom: 2px;
+}
+
+.side_bar h1 {
+  color:#032D67;
+  font-size:14px;
+  font-weight:bold;
+  margin-top: 0px;
 }
 
 .page_content {
