--- a/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/webshop.css
+++ b/CatalogXS/trunk/CatalogXS/source/agilexs/cms/shop/tetterode/website/webshop.css
@@ -10,6 +10,9 @@ thead {line-height: 10pt;}
 a {text-decoration:none;}
 a:hover {text-decoration: underline;}
 
+span.error {
+	color: red;
+}
 
 /* Terugkerende elementen */
 body {
@@ -519,6 +522,31 @@ margin-bottom: 2px;
   padding:2px;
   color: #333333;
 }
+
+.button-bar {
+	float: right;
+	text-align: right;
+	padding: 8px;
+}
+
+.button-bar .form-button {
+  background-color:#032D67;
+  color:#fff;
+  font-size:12px;
+  border:0px;
+  margin:0px;
+  padding:4px;
+  padding-top:2px;
+  *padding-top:1px;
+  padding-bottom:1px;
+  cursor:pointer;
+}
+
+.form-button.disabled{
+  background-color:#aaa;
+  color : #fff;
+}
+
 
 #contactformulier .formbutton {
   background-image:url("images/button_background.gif");
