--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/templates/right_bar.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/templates/right_bar.html
@@ -18,20 +18,27 @@
     </form> 
   </div>
   <hr/> 
+    <webshop:current-user>
+    <object:none>
   <div class="side_bar_panel loginpanel"> 
     <h1>Login</h1>
     <webshop:login-form>
       <table> 
-        <tr> 
-        <td><login:email class="formfield emailfield"/></td></tr>
-        <tr><td><login:password class="formfield passwordfield"/>
-        <login:login class="formbutton"/></td>
-        </tr> 
+        <tr><td><login:email-field class="formfield emailfield"/></td></tr>
+        <tr><td><login:password-field class="formfield passwordfield"/>
+        <login:login-button class="formbutton"/></td>
+        </tr>
+        <login:failure> 
+        <tr><td><span class="error">Invalid user name or password</span></td></tr>
+        <tr><td><a href="/register">Forgot password? &gt;&gt;</a></td></tr>
+        </login:failure>
       </table> 
-      <a href="/register">Register as new customer &gt;&gt;</a>
     </webshop:login-form>
+     <a href="/register">Register as new customer &gt;&gt;</a>
   </div> 
   <hr/> 
+    </object:none>
+    </webshop:current-user>
   <div class="side_bar_panel"> 
     <h1>Order status</h1>
     <webshop:shopping-cart>
