git-svn-id: file:///var/svn/claro-catalog@218 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/templates/right_bar.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/templates/right_bar.html
@@ -30,7 +30,7 @@
         </tr>
         <login:failure> 
         <tr><td><span class="error">Invalid user name or password</span></td></tr>
-        <tr><td><a href="/register">Forgot password? &gt;&gt;</a></td></tr>
+        <tr><td><login:forgot-password-link>Forgot password? &gt;&gt;</login:forgot-password-link></td></tr>
         </login:failure>
       </table> 
     </webshop:login-form>
