--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/page.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/page.html
@@ -10,7 +10,7 @@
 	  <link rel="shortcut icon" type="image/x-icon" href="/images/icon.jpg" />
     </template:include>
     
-    <script id="jquery" src="/classpath/jquery-1.3.2-min.js" type="text/javascript"/>
+    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
     
 	  <link rel="stylesheet" type="text/css" href="/stylesheets/coda-slider-2.0.css" />
