git-svn-id: file:///var/svn/claro-catalog@258 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/right_bar.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/right_bar.html
@@ -17,6 +17,14 @@
       </table> 
     </form> 
   </div>
+  <cms:locales><list:plural>
+  <hr/> 
+  <div class="side_bar_panel loginpanel"> 
+  <h1>Choose Language</h1>
+  <list:repeat><locale:select-link><locale:short/> </locale:select-link></list:repeat>
+  </div>
+  </list:plural></cms:locales>		  
+  
   <hr/> 
     <webshop:current-user>
     <object:none>
