--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/right_bar_de.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/right_bar_de.html
@@ -17,7 +17,15 @@
       </table> 
     </form> 
   </div>
+    <cms:locales><list:plural>
   <hr/> 
+  <div class="side_bar_panel loginpanel"> 
+  <h1>Choose Language</h1>
+  <list:repeat><locale:select-link><locale:short/> </locale:select-link></list:repeat>
+  </div>
+  </list:plural></cms:locales>		
+  
+   <hr/> 
     <webshop:current-user>
     <object:none>
   <div class="side_bar_panel loginpanel"> 
@@ -36,6 +44,7 @@
     </webshop:login-form>
      <a href="/register">Register as new customer &gt;&gt;</a>
   </div> 
+ 
   <hr/> 
     </object:none>
     </webshop:current-user>
