--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/page.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/page.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     
@@ -10,12 +11,25 @@
 	  <link rel="shortcut icon" type="image/x-icon" href="/images/icon.jpg" />
     </template:include>
     
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
+    <script id="jquery" src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
     
 	  <link rel="stylesheet" type="text/css" href="/stylesheets/coda-slider-2.0.css" />
+	  <link rel="stylesheet" type="text/css" href="/stylesheets/tabs.css" />
+
+	  
     <script id="slider" src="/javascripts/jquery.coda-slider-2.0.js" type="text/javascript"/>
     <script id="easing" src="/javascripts/jquery.easing.1.3.js" type="text/javascript"/>
+    
+<!-- UI Tools: Tabs, Tooltip, Scrollable and Overlay (4.00 Kb) -->
+<script src="http://cdn.jquerytools.org/1.2.2/tiny/jquery.tools.min.js"></script>
+
+<!-- Form tools: Dateinput, Rangeinput and Validator. No jQuery library. (5.63 Kb) -->
+<script src="http://cdn.jquerytools.org/1.2.2/form/jquery.tools.min.js"></script>
+
+<!-- ALL jQuery Tools. No jQuery library -->
+<script src="http://cdn.jquerytools.org/1.2.2/all/jquery.tools.min.js"></script>
+
   </head>
 <body> 
   <div id="page"> 
@@ -27,7 +41,6 @@
         <lift:notice_msg>&#160;</lift:notice_msg>
       </lift:msgs>
       </div>
-		  
 		  <webshop:current-user>
       <div class="page_login">
         Welcome, <user:name/>
