Fixed #153: Underline links on hover.
git-svn-id: file:///var/svn/claro-catalog@260 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/theme/catalogxs/public/gwt/catalogxs/catalogxs.css
+++ b/CatalogXS/trunk/CatalogXSAdmin/source/agilexs/catalogxsadmin/presentation/theme/catalogxs/public/gwt/catalogxs/catalogxs.css
@@ -18,6 +18,9 @@ body {
 a, a:visited, a:hover {
   color: #0000AA;
 }
+a:hover {
+	text-decoration:underline;
+}
 .gwt-Reference-catalogxs {
   height: 5px;
   width: 5px;
