git-svn-id: file:///var/svn/claro-catalog@269 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/right_bar.html
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/templates/right_bar.html
@@ -17,6 +17,13 @@
       </table> 
     </form> 
   </div>
+  <webshop:filter-groups>
+  <hr/> 
+  <div class="side_bar_panel"> 
+  <h1>Filter</h1>
+  <list:repeat><group:name/></list:repeat>
+  </div>
+  </webshop:filter-groups>
   <cms:locales><list:plural>
   <hr/> 
   <div class="side_bar_panel loginpanel"> 
