--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/webshop.css
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/webshop.css
@@ -27,7 +27,7 @@ body {
 
 #page {
   position:relative;
-  width:960px;
+  width:965px;
   margin:auto;
   min-height:800px;
   _height:800px;
@@ -687,5 +687,17 @@ margin-bottom: 2px;
 	position: relative;
 	width: 164px;
 	height: 191px;
+	float:left;
+}
+.product {
+  position:relative;
+  background-image:url("images/product_panel.png");
+  background-repeat:no-repeat;
+  margin-top:15px;
+  margin-bottom:4px;
+  padding:14px;
+	position: relative;
+	width: 144px;
+	height: 161px;
 	float:left;
 }
