--- a/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/stylesheets/coda-slider-2.0.css
+++ b/CatalogXS/trunk/ClaroCMS/src/main/resources/claro/cms/webshop/website/stylesheets/coda-slider-2.0.css
@@ -10,10 +10,10 @@
 	.coda-slider { background: #ebebeb }
 	
 	/* Use this to keep the slider content contained in a box even when JavaScript is disabled */
-	.coda-slider-no-js .coda-slider { height: 200px; overflow: auto !important; padding-right: 20px }
+	.coda-slider-no-js .coda-slider { height: 400px; overflow: auto !important; padding-right: 20px }
 	
 	/* Change the width of the entire slider (without dynamic arrows) */
-	.coda-slider, .coda-slider .panel { width: 500px } 
+	.coda-slider, .coda-slider .panel { width: 558px; height: 320px; } 
 	
 	/* Change margin and width of the slider (with dynamic arrows) */
 	.coda-slider-wrapper.arrows .coda-slider, .coda-slider-wrapper.arrows .coda-slider .panel { width: 400px }
