git-svn-id: file:///var/svn/claro-catalog@280 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
@@ -379,6 +379,10 @@ hr {
 	background: url(images/homepage05.gif) no-repeat left top;
 }
 
+#categories li.group-first {
+	border-left: 1px solid red;
+}
+
 #categories a {
 	display: block;
 	float: left;
