--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
@@ -92,8 +92,8 @@
 					<li list:even="class=alt">
 						<promotion:product>
 						<p class="image"><a href="#"><product:value property="Image" height="84px" class="border" /></a></p>
-						<h3><a href="#"><product:value property="Description"/></a></h3>
-						<p><product:value property="Synopsis"/>Delenit augue duis dolore sed feugait eleifend option.</p>
+						<h3><a href="#"><product:value property="Name"/></a></h3>
+						<p><product:value property="Description"/></p>
 						<p><a href="#" class="add">Add to Cart</a> <b><product:value property="Price"/></b></p>
 						</promotion:product>
 					</li>
