git-svn-id: file:///var/svn/claro-catalog@287 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
@@ -85,6 +85,10 @@ p, ul, ol, dl {
 	text-decoration: underline;
 }
 
+.list2 li h3 {
+	height: 40px;
+}
+
 .list2 .add {
 	float: left;
 	width: 69px;
