git-svn-id: file:///var/svn/claro-catalog@289 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
@@ -90,3 +90,31 @@ html, body {
 	margin: 0px auto;
 }
 
+/** PAGING */
+
+.paging {
+	float:right;
+	padding-right: 8px;
+}
+
+ .paging-previous.inactive {
+	display: none;
+}
+
+
+.paging .inactive {
+	color: grey;
+}
+
+.paging .active {
+	color: white;
+}
+
+.paging .paging-nr {
+	padding-left: 3px;
+	padding-right: 3px;
+}
+
+.paging .current {
+	color: black
+}
