git-svn-id: file:///var/svn/claro-catalog@293 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
@@ -97,10 +97,14 @@ html, body {
 	padding-right: 8px;
 }
 
+.paging a {
+	text-decoration: none;
+	color: white;
+}
+
  .paging-previous.inactive {
 	display: none;
 }
-
 
 .paging .inactive {
 	color: grey;
@@ -116,5 +120,5 @@ html, body {
 }
 
 .paging .current {
-	color: black
+	font-size: 110%;
 }
