git-svn-id: file:///var/svn/claro-catalog@294 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
@@ -94,12 +94,21 @@ html, body {
 
 .paging {
 	float:right;
-	padding-right: 8px;
+	padding-right: 5px;
+}
+
+.paging .paging-previous {
+	padding-left: 3px;
+}
+
+.paging .paging-next {
+	padding-right: 3px;
 }
 
 .paging a {
 	text-decoration: none;
 	color: white;
+	padding-top: 20px;
 }
 
  .paging-previous.inactive {
