git-svn-id: file:///var/svn/claro-catalog@295 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/layout.css
@@ -95,6 +95,7 @@ html, body {
 .paging {
 	float:right;
 	padding-right: 5px;
+	margin-top: -2px;
 }
 
 .paging .paging-previous {
@@ -129,5 +130,5 @@ html, body {
 }
 
 .paging .current {
-	font-size: 110%;
+	font-size: 115%;
 }
