git-svn-id: file:///var/svn/claro-catalog@300 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
@@ -4,21 +4,18 @@
 <title></title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="/default.cssqq" rel="stylesheet" type="text/css" />
-<link href="/layout.cssqq" rel="stylesheet" type="text/css" />
-<script id="jquery" src="/javascripts/jquery-1.4.2.min.js"
-  type="text/javascript" />
-
+<link href="/default.css" rel="stylesheet" type="text/css" />
+<link href="/layout.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 <!--
-@import url("layout.css");
+ @import url("layout.css");
 -->
 </style>
 </head>
 <body>
-<webshop:promotions>
-  <div class="any" list:first="class=first" list:last="class=last"></div>
-</webshop:promotions>
+	<webshop:promotions>
+<div class="any" list:first="class=first" list:last="class=last"></div>
+		</webshop:promotions>
 <div id="header">
 <div id="logo">
 <h1>WebsiteName.com</h1>
@@ -40,64 +37,62 @@
 <!-- end #menu --></div>
 <!-- end #header -->
 <div id="forms">
-<div id="search"><webshop:search-form form="POST">
-  <fieldset><search:search-string id="query" /> <search:submit
-    id="search-submit" /> <a href="#">Advanced Search</a></fieldset>
-</webshop:search-form></div>
-<!-- end #search -->
-<div id="currency">
-<form method="get" action="">
-<fieldset><select id="unit" name="unit">
-  <option value="USD">U.S. Dollar</option>
-</select> <input type="submit" id="currency-submit" value="Change Currency" /></fieldset>
-</form>
+	<div id="search">
+    <webshop:search-form form="POST"> 
+			<fieldset>
+      <search:search-string id="query"/> 
+      <search:submit id="search-submit" />
+			<a href="#">Advanced Search</a>
+			</fieldset>
+    </webshop:search-form> 
+	</div>
+	<!-- end #search -->
+	<div id="currency">
+		<form method="get" action="">
+			<fieldset>
+			<select id="unit" name="unit">
+				<option value="USD">U.S. Dollar</option>
+			</select>
+			<input type="submit" id="currency-submit" value="Change Currency" />
+			</fieldset>
+		</form>
+	</div>
+	<!-- end #currency -->
+	<div id="cart-items">
+		<p><span>You have <b>5</b> items in your cart</span> <a href="#" class="button">View Cart</a></p>
+	</div>
+	<!-- end #cart-items -->
 </div>
-<!-- end #currency --> <webshop:shopping-cart>
-  <shopping-cart:items>
-    <list:once>
-      <div id="cart-items">
-      <p><span>You have <b><list:size /></b> <list:plural>items</list:plural><list:single>item</list:single>
-      in your cart</span> <a href="/cart" class="button">View Cart</a></p>
-      </div>
-    </list:once>
-  </shopping-cart:items>
-</webshop:shopping-cart> <!-- end #cart-items --></div>
 <!-- end #forms -->
 <div id="categories">
-<ul>
-  <!--
+	<ul>
+		<!--
 			Use class="active" to permanently highlight a given menu item
 		-->
-  <li class="first"><a href="/">Home</a></li>
-  <webshop:navigation>
-    <list:group>
-      <list:first>
-        <li category:is-selected="class=active"><category:link
-          include-search-result="true">
-          <category:category-value property="Name" />
-        </category:link></li>
-      </list:first>
-      <list:skip-first>
-        <li category:is-selected="class=active"
-          group:first="class=group-first"><category:link
-          include-search-result="true">
-          <category:category-value property="Name" />
-        </category:link></li>
-      </list:skip-first>
-    </list:group>
-  </webshop:navigation>
-</ul>
+		<li class="first"><a href="/">Home</a></li>
+		<webshop:navigation><navigation:children>
+		<navigation:name/>
+		<navigation:category>
+			<list:group>
+				<list:first>
+					<li  category:is-selected="class=active"><category:link include-search-result="true"><category:category-value property="Name"/></category:link></li>
+				</list:first>
+				<list:skip-first>
+					<li category:is-selected="class=active" group:first="class=group-first"><category:link include-search-result="true"><category:category-value property="Name"/></category:link></li>
+				</list:skip-first>
+			</list:group>
+			</navigation:category>
+			</navigation:children>
+		</webshop:navigation>
+	</ul>
 </div>
 <!-- end #categories -->
 
-<template:content />
+<template:content/>
 
 <div id="footer">
-<p class="links"><a href="#">Privacy Policy</a>
-&#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Legal Information</a>
-&#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Terms of Use</a></p>
-<p class="legal">Copyright (c) 2008 Websitename.com. All rights
-reserved.</p>
+	<p class="links"><a href="#">Privacy Policy</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Legal Information</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Terms of Use</a></p>
+	<p class="legal">Copyright (c) 2008 Websitename.com. All rights reserved.</p>
 </div>
 <!-- end #footer -->
 </body>
