--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
@@ -37,12 +37,41 @@ p, ul, ol, dl {
 }
 
 .list1 li {
-	background: url(images/homepage13.gif) no-repeat right center;
+	background: url(images/homepage13.gif) no-repeat right 8px;
 	border-top: 1px solid #D1D1D1;
 }
 
 .list1 li.first {
 	border: none;
+}
+
+.list1 li.selected {
+	background: none;
+}
+.list1 li.selected a {
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.list1 li.selected ul a {
+	text-decoration: underline;
+	font-weight: normal;
+}
+
+/** LIST1 SUBLIST STYLE */
+
+.list1 ul {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+.list1 ul a {
+	padding-left: 8px;
+}
+
+.list1 ul li.first {
+	border-top: 1px solid #D1D1D1;
 }
 
 /** LIST STYLE 2 */
