--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
@@ -70,17 +70,15 @@
 			Use class="active" to permanently highlight a given menu item
 		-->
   <li class="first"><a href="/">Home</a></li>
-  <webshop:navigation>
-    <navigation:children>
+  <webshop:top-level-categories>
       <list:group>
-          <li>
-            <navigation:is-selected><attr:set name="class" value="active"/></navigation:is-selected>
-            <group:first><list:skip-first><attr:append name="class" value="group-first"/></list:skip-first></group:first>
-            <navigation:link><navigation:name /></navigation:link>
-          </li>
+        <li>
+          <category:is-on-trail><attr:set name="class" value="active"/></category:is-on-trail>
+          <group:first><list:skip-first><attr:append name="class" value="group-first"/></list:skip-first></group:first>
+          <category:link><category:name /></category:link>
+        </li>
       </list:group>
-    </navigation:children>
-  </webshop:navigation>
+    </webshop:top-level-categories>
 </ul>
 </div>
 <!-- end #categories -->
