--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
@@ -11,6 +11,9 @@
  @import url("layout.css");
 -->
 </style>
+<script type="text/javascript" src="/ajax_request/liftAjax.js"></script> 
+<script id="jquery" src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"/>
+<script id="json" src="/classpath/json.js" type="text/javascript"/>
 </head>
 <body>
 	<webshop:promotions>
