--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/product-small.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/product-small.html
@@ -1,5 +1,12 @@
-<p class="image"><a href="#"><product:value property="Image"
-	height="84px" class="border" /></a></p>
-<h3><a href="#"><product:value property="Name" /></a></h3>
-<p><a href="#" class="add">Add to Cart</a> <b><product:value
-	property="Price" /></b></p>
+<li class="product-small">
+  <list:even><attr:append name="class" value="alt"/></list:even>
+	<a href="#"><product:value property="Image" /></a>
+	<p>
+    <h3><a href="#"><product:value property="Name" /></a></h3>
+    <div><product:value property="Variant" /></div>
+  </p>
+	<div class="buttons">
+    <product:add-to-cart-link class="add">Add to Cart</product:add-to-cart-link> 
+    <b><product:value property="Price" /></b>
+  </div>
+</li>
